--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
     </div>
   </footer>
 
-  <script src="/js/swiper-bundle.js"></script>
-  <script src="/js/main.js"></script>
+  <script src="./js/swiper-bundle.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 
 
